# journal_article-1

./: .gitignore  AGENTS.md  README.md  面向动态参与P2P交易的碳责任追踪与动态群体强化学习.docx
dp-lcrl-rl/: CMTM_验证实验方案.md  DP-LCRL_动态群体强化学习实验方案.md  README.md  activate_env.bat  logs_cmtm_stateless_seed42.txt  logs_direct_max_seed44.txt  logs_full_seed42.txt  logs_full_seed43.txt  logs_full_seed44.txt  pyproject.toml  requirements.txt  run_all_training.sh  实验图表需求.md
dp-lcrl-rl/dp_lcrl_rl/: __init__.py
dp-lcrl-rl/dp_lcrl_rl/algorithms/: __init__.py
dp-lcrl-rl/dp_lcrl_rl/envs/: __init__.py
dp-lcrl-rl/dp_lcrl_rl/runner/: __init__.py
dp-lcrl-rl/dp_lcrl_rl/scripts/: __init__.py  run_experiment1_sequence_modeling.py  run_formal_mask_ablation_20260428.py
dp-lcrl-rl/dp_lcrl_rl/utils/: __init__.py  shared_buffer.py
dp-lcrl-rl/reports/: final_four_figures_experiment_scheme_and_paper_text_20260511.md  仿真验证与结果分析.md
dp-lcrl-rl/reports/agent_count_sweep_safe/: agent_count_sweep_safe.csv  smoke_safe.csv
dp-lcrl-rl/reports/checkpoint_stage_6000_7000_8000_20260416/: checkpoint_stage_aggregate.csv  checkpoint_stage_raw.csv  checkpoint_stage_raw.html  checkpoint_stage_report.json  checkpoint_stage_report.md
dp-lcrl-rl/scripts/: run_rewardshape_carbon008_100k.ps1  run_rewardshape_carbon008_10k.ps1
dp-lcrl-rl/tests/: test_controlled_ablations.py  test_paper_env.py  test_training_analytics.py  test_vec_env.py
dp-lcrl-rl/tools/: eval_agent_count_sweep_safe.py  run_formal_ablation_3seed.py  run_full_experiment.py  start_formal_mask_ablation_20260428.cmd
(+250 files in other folders)
