[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dp-lcrl-rl"
version = "0.1.0"
description = "Paper-aligned dynamic-participation P2P low-carbon trading with carbon responsibility tracing and MAT"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "DP-LCRL Project"}]
license = {text = "MIT"}
dependencies = [
  "numpy>=1.24",
  "torch>=2.0",
  "tensorboardX>=2.6",
  "gymnasium>=0.29",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
wandb = ["wandb>=0.17"]
test = ["pytest>=8.0"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["dp_lcrl_rl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
